force position absolute to stop the icon to be center aligned

--- a/less/src/notify.less
+++ b/less/src/notify.less
@@ -81,11 +81,13 @@
     }
 
     .notify-popup-icon {
+        position: absolute!important;
         .icon {
             font-size: 60px;
             height: 60px;
             width: 60px;
             color: @notify-icon-color;
+            margin: 0!important;
         }
         right: 0px;
         left: inherit;
